--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
+    "@jupyterlab/services": "^3.2.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-i18n": "^8.22.4",
