--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@jupyterlab/services": "^3.2.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-flag-icon": "^1.0.6",
     "vue-i18n": "^8.22.4",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
